# sommelier

./: CLAUDE.md  LICENSE-MIT  README.md  RELEASES.md  build.sh  pyproject.toml  release.sh  setup.py
docs/: EXAMPLES.md  INSTALLATION.md  NAME.md  QUICKSTART.md  TEMPLATE_SYNTAX.md  YAML_SCHEMA.md
examples/go-gorm/: schema.yaml
examples/go-gorm/templates/: model.go.j2
examples/java-spring/: schema.yaml
examples/java-spring/templates/: dto.java.j2  entity.java.j2  liquibase.xml.j2  repository.java.j2
examples/python-sqlalchemy/: schema.yaml
examples/python-sqlalchemy/templates/: model.py.j2
examples/rust-sqlx/: schema.yaml
examples/rust-sqlx/templates/: migration.sql.j2  model.rs.j2
src/pati/: __init__.py  cli.py  generator.py  utils.py
src/sommelier/: __init__.py  cli.py  config.py  generator.py  utils.py
templates/: liquibase.xml.j2
tests/: test_config.py  test_defaults.py  test_generator.py  test_integration.py
