[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sommelier"
version = "0.1.0"
description = "Language-agnostic boilerplate generator from YAML data models"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT OR Apache-2.0"}
authors = [
    {name = "Peter Verhas", email = "peter.verhas@gmail.com"},
]
keywords = ["code-generation", "boilerplate", "yaml", "jinja2", "templates"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Code Generators",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "pyyaml>=6.0",
    "jinja2>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=22.0",
    "flake8>=5.0",
    "twine>=4.0",
    "build>=0.9",
]

[project.urls]
Homepage = "https://github.com/yourusername/sommelier"
Documentation = "https://github.com/yourusername/sommelier/tree/main/docs"
Repository = "https://github.com/yourusername/sommelier.git"
Issues = "https://github.com/yourusername/sommelier/issues"

[project.scripts]
sommelier = "sommelier.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages]
find = {where = ["src"]}

[tool.setuptools.package-data]
sommelier = ["examples/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=src/sommelier --cov-report=term-missing"

[tool.black]
line-length = 100
target-version = ['py38']

[tool.flake8]
max-line-length = 100
exclude = [".git", "__pycache__", "build", "dist"]
